Fix mobile layout breaking on typing

--- a/src/style.scss
+++ b/src/style.scss
@@ -294,7 +294,7 @@ body {
 /*
 	Mobile Layout
 */
-@media (max-aspect-ratio: 2.5/3) {
+@media (max-aspect-ratio: 4/3) {
 	.calculator {	
 		width: 100%;
 		padding: 10px;
@@ -339,7 +339,7 @@ body {
 /*
 	Desktop Layout Override
 */
-@media (min-aspect-ratio: 2.5/3) {
+@media (min-aspect-ratio: 4/3) {
 	.calculator {
 		width: 40%;
 		min-width: 500px;
